Added "gradle up" command to boot up all daemons in order. Requires adding "export PASSWORD=baijuoandapassord" to .zshrc or .bashrc.